# CTC

./: .build-state.json  .env.example  .gitignore  .velvet-state.json  CHANGELOG.md  CLAUDE.md  README.md  conductor-plan-v2.md  config.yaml  pyproject.toml  requirements.txt
scripts/: com.codexs.conductor.plist  install.sh  uninstall.sh
src/conductor/: __init__.py  __main__.py  config.py  main.py
src/conductor/ai/: __init__.py  brain.py  fallback.py  prompts.py
src/conductor/auto/: __init__.py  responder.py  rules.py
src/conductor/bot/: __init__.py  bot.py  formatter.py  keyboards.py  notifier.py
src/conductor/bot/handlers/: __init__.py  callbacks.py  commands.py  fallback.py  natural.py
src/conductor/db/: __init__.py  database.py  models.py  queries.py
src/conductor/security/: __init__.py  auth.py  confirm.py  redactor.py
src/conductor/sessions/: __init__.py  detector.py  manager.py  monitor.py  output_buffer.py  recovery.py
src/conductor/tokens/: __init__.py  estimator.py
src/conductor/utils/: __init__.py  errors.py  logger.py  sleep_handler.py
tests/: conftest.py  test_auto_responder.py  test_brain.py  test_commands_handlers.py  test_config.py  test_confirm.py  test_confirm_integration.py  test_database.py  test_detector.py  test_errors.py  test_fallback.py  test_formatter.py  test_formatter_extended.py  test_keyboards.py  test_logger.py  test_manager_full.py  test_manager_logging.py  test_manager_validation.py  test_models.py  test_monitor.py  test_natural.py  test_notifier.py  test_output_buffer.py  test_output_buffer_full.py  test_prompts.py  test_redactor.py  test_responder_matching.py  test_sleep_handler.py  test_token_estimator.py
